--- a/progress-block/package.json
+++ b/progress-block/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1"
   },
   "dependencies": {
+    "style-loader": "^3.3.2",
     "webpack-dev-server": "^4.15.0"
   }
 }
