--- a/progress-block/package.json
+++ b/progress-block/package.json
@@ -1,11 +1,16 @@
 {
   "name": "progress-block",
   "version": "1.0.0",
+  "repository": {
+    "url": "git+https://github.com/jumpeebunee/progress-block.git"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +18,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.1",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1"
